--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,16 +4,92 @@
 // do not use in order to create a smaller css file.
 @include sencha-panel;
 @include sencha-buttons;
-@include sencha-sheet;
-@include sencha-picker;
+// @include sencha-sheet;
+// @include sencha-picker;
 @include sencha-tabs;
 @include sencha-toolbar;
-@include sencha-toolbar-forms;
-@include sencha-indexbar;
+// @include sencha-toolbar-forms;
+//@include sencha-indexbar;
 @include sencha-list;
 @include sencha-layout;
-@include sencha-carousel;
+// @include sencha-carousel;
 @include sencha-form;
 @include sencha-msgbox;
 
 // Your custom code goes here...
+
+ .pullmenu {
+ 	padding: 0!important ;
+ 	z-index:10!important;
+ }
+  
+
+.x-pullmenu {
+	display: -webkit-box!important;
+	display: box!important;
+	-webkit-box-orient: horizontal;
+	box-orient: horizontal;
+	-webkit-box-align: center;
+	box-align: center;
+	-webkit-box-pack: center;
+	box-pack: center;
+	position: absolute!important;
+
+}
+.x-pullmenu-top {
+	top: -30px;
+	left: 0;
+	width: 100%;
+	height: 30px;	
+}
+
+.x-pullmenu-left {
+  	top: 0px;
+  	left: -100px;
+  	width: 100px;
+  	height: 100%;
+}
+
+  	.pullmenu#my-top-menu .x-body {
+    		background-color: black!important;
+    	}
+    	.bottom-menu {
+    		background-image: url(../images/bottom-menu.png) ;
+    		background-repeat: no-repeat ;
+    		background-size: 100% 100% ;
+    	}
+    	
+    	.menu-top {
+    		background-image: url(../images/top-menu.png) ;
+    		background-repeat: no-repeat ;
+    	}
+    	.doc-button {
+    		background-image: url(../images/info.png)!important;
+    		background-repeat: no-repeat ;
+    		background-size: 100% 100% ;
+    		width: 30px ;
+    		height: 30px ;
+    		margin: 5px 20px 0 20px;
+    	}
+    	.ok-button {
+    		background-image: url(../images/ok.png)!important;
+    		background-repeat: no-repeat ;
+    		background-size: 100% 100% ;
+    		width: 30px ;
+    		height: 30px ;
+    		margin: 5px 0 5px 20px;
+    	}
+    	.saving {
+    		margin-top: 8px; 
+    	}
+    	#doc-content {
+    		font-size: 15px ;
+    	}
+    	.doc-opt-label {
+    		display: inline-block;
+    		width: 100px ;
+    	}
+    	.doc-opt-expl {
+    		display: inline-block ;
+    		width: 100% ;
+    	}
